--- a/index.qmd
+++ b/index.qmd
@@ -1,7 +1,7 @@
 <!--TAGS-->
 ---
 pagetitle: "_TEMPLATE"
-page-layout: custom
+# page-layout: custom
 # section-divs: false
 toc: true
 # toc means table of contents, thats a link to all sections
