changed the structure of the sidebar in a way that it hopefully works

--- a/index.qmd
+++ b/index.qmd
@@ -2,9 +2,11 @@
 ---
 pagetitle: "_TEMPLATE"
 # page-layout: custom
+# when using "page-layout :custom" it just doesnt load the sidebar
 # section-divs: false
 toc: true
 # toc means table of contents, thats a link to all sections
+# when using the quarto standart page layout the table of contents shows on the right # side of the screen :)
 description: | 
   A cool template
 #hide-description: true
